# InjectMe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dummy_main.cpp
.github/workflows/: My_CI.yaml
InjectMe/: CMakeLists.txt
InjectMe/include/: InjectMe.hpp  InjectMe_advanced.hpp  InjectMe_configuration.hpp  InjectMe_exceptions.hpp  InjectMe_inject.hpp  InjectMe_types.hpp
InjectMe/src/: Config.cpp  ConfigImpl.cpp  ConfigImpl.hpp  Database.cpp  Database.hpp  DatabaseInstanceInsertion.cpp  DatabaseInstanceInsertion.hpp  TypeData.cpp  TypeData.hpp  advanced.cpp  configure.cpp  dummy_function.cpp  exceptions.cpp  inject.cpp  reset.cpp
src/: CMakeLists.txt
src/implem/: dummy_function.cpp
src/include/: InjectMe.hpp
src/src/: dummy_function.cpp
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  IntegrationTestHelpers.hpp  testing.sh
tests/integration_tests/1_configure_and_exit/: main.cpp
tests/integration_tests/2_configure_single_type/: main.cpp
tests/integration_tests/3_configure_complex_type/: main.cpp
tests/integration_tests/4_triple_nested_injections/: main.cpp
tests/integration_tests/5_recursion_is_caught/: main.cpp
tests/integration_tests/6_possible_use_case/: CMakeLists.txt  main.cpp
tests/integration_tests/configure_and_exit_0/: CMakeLists.txt  main.cpp
tests/integration_tests/configure_complex_type_0/: CMakeLists.txt
tests/integration_tests/configure_single_type_0/: CMakeLists.txt  main.cpp
tests/integration_tests/dummy_function_0/: CMakeLists.txt  main.cpp
tests/integration_tests/recursion_is_caught/: CMakeLists.txt  main.cpp
tests/integration_tests/triple_nested_injections/: CMakeLists.txt  main.cpp
tests/performance_tests/: CMakeLists.txt  generate_cpp_file.py  todo.txt
tests/unit_tests/: CMakeLists.txt  Config_tests.cpp  configure_tests.cpp  dummy_function_tests.cpp  tests_main.cpp
